# digital-pipeline-repo

./: .gitignore  LICENSE  README.md  analysis_options.yaml  benchmark_results.jsonl  handoff_implementation_plan.md  implementation_plan.md  implementation_plan_handoff.md  requirements.txt  task.md  tessl.json  walkthrough.md
.agents/: AGENTS.md
.pipeline/: constitution.md  implementation-plan.md
.tessl-plugin/: plugin.json
app_flutter/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  test_db.dart  test_output.txt  visual_test_spec.md
app_test_harness/: README.md  analysis_options.yaml  pubspec.yaml
config/: domain_denylist.txt
docs/: adversarial_audit_report.md  cable_landing_stations_report.md  chat_transcript.md  consolidated_logical_ui_design_report.md  feat-decoupled-persistence-layout-engine-design.md  feat-firestore-persistence-adapter-design.md  feat-hardware-decoupled-persistence-design.md  handoff_document.md  ntt_exchanges_report.md  remediation_implementation_plan.md  remediation_plan.md  sprint-implementation-plan.md  uml_compliance_agentic_analysis_plan.md  uml_compliance_audit_report.md
parity_auditor/: pyproject.toml
parity_auditor/src/parity_auditor/: cli.py
parity_auditor/src/parity_auditor/core/: models.py  workspace.py
parity_auditor/src/parity_auditor/parsers/: __init__.py  base.py  schema_router.py
parity_auditor/src/parity_auditor/utils/: ast_utils.py  case_utils.py  color_utils.py  comment_utils.py
parity_auditor/src/parity_auditor/validators/: base.py  behavioral.py  codebase.py  docs.py  uml.py
wiki/: Home.md  (+10 more)
(+507 files in other folders)
